Add welcome message to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 </head>
 <body>
     <div><h1>OnxAI</h1></div>
+    <div>
+        <p>Welcome to the OnxAI homepage. This is a placeholder for future content.</p>
+    </div>
 </body>
 </html>
