--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <div><h1>OnxAI</h1></div>
+    <div id="WebsiteHeading"><h1>OnxAI</h1></div>
     <div>
         <p>Welcome to the OnxAI homepage. This is a placeholder for future content.</p>
     </div>
