Revise index.html to enhance content and structure; add introductory text and links section. Update main.js with new log messages.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,34 @@
 </head>
 <body>
     <div id="WebsiteHeading"><h1>OnxAI</h1></div>
-    <div>
-        <p>Welcome to the OnxAI homepage. This is a placeholder for future content.</p>
+    <div id="OnxAIIntro">
+            <h2>Onxai: The Most Advanced Sparx Bot</h2>
+
+        <p>
+        Onxai provides a highly advanced Sparx-style assistant engineered for superior accuracy, speed, and clarity.
+        It is designed to outperform existing study bots in overall performance, response time, and quality of explanations.
+        For users frustrated by slow or unreliable study tools, Onxai delivers a consistently efficient and dependable experience.
+        </p>
+
+        <h3>Why It Matters</h3>
+
+        <p>
+        Onxai addresses the growing need for faster and more effective academic support by offering:
+        </p>
+
+        <ul>
+        <li>Lightning-fast responses</li>
+        <li>High-accuracy explanations</li>
+        <li>More refined reasoning and improved formatting</li>
+        </ul>
+
+        <p>
+        For those seeking the most robust and Sparx-relevant AI assistant available, Onxai represents a leading solution.
+        </p>
     </div>
+    <div id="LinksSection"> 
+        <h3>Links</h3>
+        <a href="/credits">Credits</a>     
+   </div>
 </body>
 </html>
