Add credits page with team information; update main.js and main.css for styling and functionality

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <div id="WebsiteHeading"><h1>OnxAI</h1></div>
+    <div id="WebsiteHeading"><button onclick="runHomeClick()" id="HeaderBtn" >OnxAI</button></div>
     <div id="OnxAIIntro">
-            <h2>Onxai: The Most Advanced Sparx Bot</h2>
+            <h2>OnxAI: The Most Advanced Sparx Bot</h2>
 
         <p>
-        Onxai provides a highly advanced Sparx-style assistant engineered for superior accuracy, speed, and clarity.
+        OnxAI provides a highly advanced Sparx-style assistant engineered for superior accuracy, speed, and clarity.
         It is designed to outperform existing study bots in overall performance, response time, and quality of explanations.
-        For users frustrated by slow or unreliable study tools, Onxai delivers a consistently efficient and dependable experience.
+        For users frustrated by slow or unreliable study tools, OnxAI delivers a consistently efficient and dependable experience.
         </p>
 
         <h3>Why It Matters</h3>
 
         <p>
-        Onxai addresses the growing need for faster and more effective academic support by offering:
+        OnxAI addresses the growing need for faster and more effective academic support by offering:
         </p>
 
         <ul>
