Add Discord server section to index.html for community engagement

--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
         For those seeking the most robust and Sparx-relevant AI assistant available, Onxai represents a leading solution.
         </p>
     </div>
+    <div id="OurServer">
+        <h3>Join Our Discord Server!</h3>
+        <p>Use our bot for free there!</p>
+        <p>
+        Feel free to connect with fellow OnxAI users, get support, and stay updated on the latest features by joining our Discord community.
+        </p>
+        <a href="https://discord.gg/hpr8ssYHuJ" target="_blank"><button id="JoinBtn">Join Now</button></a>
+    </div>
     <div id="LinksSection"> 
         <h3>Links</h3>
         <a href="/credits">Credits</a>     
    </div>
+
 </body>
 </html>
