Update background colors for features and reviews sections; enhance body gradient for improved aesthetics

--- a/humaniser/index.html
+++ b/humaniser/index.html
@@ -81,7 +81,7 @@
 
   /* Features Section */
   #features {
-    background: #111;
+    background: #000;
     display: flex;
     flex-direction: column;
     gap: 40px;
@@ -103,7 +103,7 @@
 
   /* Reviews Section */
   #reviews {
-    background: #111;
+    background: #000;
     text-align: center;
     position: relative;
     overflow: hidden;
@@ -166,6 +166,10 @@
   @media(max-width:768px){
     #hero h1 { font-size: 2rem; }
     nav ul { gap: 15px; }
+  }
+  body{
+        background: #000000;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(69, 72, 79, 1) 100%, rgba(71, 76, 99, 1) 50%);
   }
 </style>
 </head>
