--- a/index.html
+++ b/index.html
@@ -1,52 +1,266 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>OnxAI</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <style>
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        body {
+            background: #000;
+            color: #fff;
+            line-height: 1.6;
+        }
+
+        /* NAV BAR */
+        nav {
+            position: sticky;
+            top: 0;
+            background: #000;
+            padding: 16px 40px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-bottom: 1px solid #222;
+            z-index: 100;
+        }
+
+        nav h1 {
+            font-size: 24px;
+            cursor: pointer;
+            letter-spacing: 1px;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 30px;
+        }
+
+        nav ul li a {
+            text-decoration: none;
+            color: #fff;
+            font-size: 15px;
+            opacity: 0.85;
+            transition: opacity 0.2s;
+        }
+
+        nav ul li a:hover {
+            opacity: 1;
+        }
+
+        /* HERO */
+        #hero {
+            min-height: 90vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 0 12%;
+            animation: fadeIn 1.2s ease forwards;
+        }
+
+        .hero-title {
+            font-size: 64px;
+            font-weight: 700;
+            letter-spacing: 3px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 1s ease forwards;
+        }
+
+        .hero-subtitle {
+            margin-top: 20px;
+            font-size: 18px;
+            max-width: 700px;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 1s ease forwards;
+            animation-delay: 0.3s;
+        }
+
+        .hero-btn {
+            margin-top: 40px;
+            padding: 14px 36px;
+            border-radius: 30px;
+            background: #fff;
+            color: #000;
+            border: none;
+            font-size: 15px;
+            font-weight: 600;
+            cursor: pointer;
+            opacity: 0;
+            transform: translateY(20px);
+            animation: slideUp 1s ease forwards;
+            animation-delay: 0.6s;
+            transition: transform 0.2s, opacity 0.2s;
+        }
+
+        .hero-btn:hover {
+            transform: translateY(-2px);
+            opacity: 0.9;
+        }
+
+        /* SECTIONS */
+        section {
+            padding: 90px 15%;
+        }
+
+        h2 {
+            font-size: 38px;
+            margin-bottom: 20px;
+            font-weight: 600;
+        }
+
+        h3 {
+            font-size: 24px;
+            margin: 30px 0 12px;
+            font-weight: 500;
+        }
+
+        p {
+            font-size: 17px;
+            opacity: 0.85;
+            max-width: 800px;
+        }
+
+        ul {
+            margin-top: 12px;
+            margin-left: 20px;
+        }
+
+        ul li {
+            margin-bottom: 8px;
+            opacity: 0.85;
+        }
+
+        /* DISCORD */
+        #discord {
+            border: 1px solid #222;
+            border-radius: 18px;
+            text-align: center;
+            margin: 80px 15%;
+            padding: 60px;
+        }
+
+        /* FOOTER */
+        footer {
+            text-align: center;
+            padding: 40px;
+            border-top: 1px solid #222;
+            font-size: 14px;
+            opacity: 0.6;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            opacity: 0.8;
+        }
+
+        footer a:hover {
+            opacity: 1;
+        }
+
+        /* ANIMATIONS */
+        @keyframes slideUp {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
+        }
+
+        /* RESPONSIVE */
+        @media (max-width: 900px) {
+            nav {
+                flex-direction: column;
+                gap: 12px;
+            }
+
+            section {
+                padding: 60px 10%;
+            }
+
+            .hero-title {
+                font-size: 42px;
+            }
+        }
+    </style>
 </head>
+
 <body>
-    <div id="WebsiteHeading"><button onclick="runHomeClick()" id="HeaderBtn" >OnxAI</button></div>
-    <div id="OnxAIIntro">
-            <h2>OnxAI: The Most Advanced Sparx Bot</h2>
 
-        <p>
-        OnxAI provides a highly advanced Sparx-style assistant engineered for superior accuracy, speed, and clarity.
-        It is designed to outperform existing study bots in overall performance, response time, and quality of explanations.
-        For users frustrated by slow or unreliable study tools, OnxAI delivers a consistently efficient and dependable experience.
-        </p>
-
-        <h3>Why It Matters</h3>
-
-        <p>
-        OnxAI addresses the growing need for faster and more effective academic support by offering:
-        </p>
-
+    <!-- NAV BAR -->
+    <nav>
+        <h1 onclick="location.href='/'">OnxAI</h1>
         <ul>
-        <li>Lightning-fast responses</li>
-        <li>High-accuracy explanations</li>
-        <li>More refined reasoning and improved formatting</li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#features">Why OnxAI</a></li>
+            <li><a href="#discord">Discord</a></li>
+            <li><a href="/credits">Credits</a></li>
         </ul>
+    </nav>
 
-        <p>
-        For those seeking the most robust and Sparx-relevant AI assistant available, Onxai represents a leading solution.
+    <!-- HERO -->
+    <section id="hero">
+        <h2 class="hero-title">OnxAI</h2>
+        <p class="hero-subtitle">
+            The most advanced Sparx-style AI assistant.<br>
+            Fast. Accurate. Reliable.
         </p>
-    </div>
-    <div id="OurServer">
-        <h3>Join Our Discord Server!</h3>
-        <p>Use our bot for free there!</p>
+        <a href="#discord">
+            <button class="hero-btn">Get Started</button>
+        </a>
+    </section>
+
+    <!-- ABOUT -->
+    <section id="about">
+        <h2>What is OnxAI?</h2>
         <p>
-        Feel free to connect with fellow OnxAI users, get support, and stay updated on the latest features by joining our Discord community.
+            OnxAI is a high-performance Sparx-style assistant engineered for speed,
+            precision, and clarity. Designed to outperform traditional study bots,
+            it delivers consistent, reliable explanations without distraction.
         </p>
-        <a href="https://discord.gg/hpr8ssYHuJ" target="_blank"><button id="JoinBtn">Join Now</button></a>
-    </div>
-    <div id="LinksSection"> 
-        <h3>Links</h3>
-        <a href="/credits">Credits</a>     
-   </div>
+    </section>
+
+    <!-- FEATURES -->
+    <section id="features">
+        <h3>Why It Matters</h3>
+        <p>OnxAI solves the problem of slow or unreliable academic tools by offering:</p>
+        <ul>
+            <li>Lightning-fast responses</li>
+            <li>High-accuracy explanations</li>
+            <li>Clean reasoning and formatting</li>
+        </ul>
+    </section>
+
+    <!-- DISCORD -->
+    <section id="discord">
+        <h2>Join Our Discord Server</h2>
+        <p>Use OnxAI for free, get support, and stay up to date.</p>
+        <a href="https://discord.gg/hpr8ssYHuJ" target="_blank">
+            <button class="hero-btn">Join Discord</button>
+        </a>
+    </section>
+
+    <!-- FOOTER -->
+    <footer>
+        © 2026 OnxAI · <a href="/credits">Credits</a>
+    </footer>
 
 </body>
 </html>
