--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OnxAI</title>
+    <title>ONxAI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
