--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>ONxAI</title>
+    <title>OnxAI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
@@ -211,6 +211,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#features">Why OnxAI</a></li>
             <li><a href="#discord">Discord</a></li>
+            <li><a href="https://onxai.github.io/humanizer/" target="_blank">Humanizer</a></li>
             <li><a href="/credits">Credits</a></li>
         </ul>
     </nav>
