Update navbar logo link and enhance styling for footer and discord sections

--- a/humanizer/index.html
+++ b/humanizer/index.html
@@ -164,7 +164,7 @@
 
 <!-- Navbar -->
 <nav>
-  <div class="logo">ONxAI</div>
+  <div class="logo"><a href="/">ONxAI</a></div>
   <ul>
     <li><a href="#hero">Home</a></li>
     <li><a href="#footer">Info</a></li>
