--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         }
 
         body {
-            background: #000;
-            color: #fff;
+            background: #000000;
+            background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(69, 72, 79, 1) 100%, rgba(71, 76, 99, 1) 50%);            color: #fff;
             line-height: 1.6;
         }
 
@@ -145,6 +145,7 @@
 
         /* DISCORD */
         #discord {
+            background-color: #000;
             border: 1px solid #222;
             border-radius: 18px;
             text-align: center;
@@ -154,21 +155,22 @@
 
         /* FOOTER */
         footer {
+            background-color: #000;
             text-align: center;
             padding: 40px;
             border-top: 1px solid #222;
             font-size: 14px;
-            opacity: 0.6;
+            opacity: 1;
         }
 
         footer a {
             color: #fff;
             text-decoration: none;
-            opacity: 0.8;
+            opacity: 1;
         }
 
         footer a:hover {
-            opacity: 1;
+            opacity: 0.8;
         }
 
         /* ANIMATIONS */
@@ -211,7 +213,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#features">Why OnxAI</a></li>
             <li><a href="#discord">Discord</a></li>
-            <li><a href="https://onxai.github.io/humanizer/" target="_blank">Humanizer</a></li>
+            <li><a href="/humanizer/">Humanizer</a></li>
             <li><a href="/credits">Credits</a></li>
         </ul>
     </nav>
