Correct capitalization of "ONxAI" throughout index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OnxAI</title>
+    <title>ONxAI</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
@@ -208,10 +208,10 @@
 
     <!-- NAV BAR -->
     <nav>
-        <h1 onclick="location.href='/'">OnxAI</h1>
+        <h1 onclick="location.href='/'">ONxAI</h1>
         <ul>
             <li><a href="#about">About</a></li>
-            <li><a href="#features">Why OnxAI</a></li>
+            <li><a href="#features">Why ONxAI</a></li>
             <li><a href="#discord">Discord</a></li>
             <li><a href="/humanizer/">Humanizer</a></li>
             <li><a href="/credits">Credits</a></li>
@@ -220,7 +220,7 @@
 
     <!-- HERO -->
     <section id="hero">
-        <h2 class="hero-title">OnxAI</h2>
+        <h2 class="hero-title">ONxAI</h2>
         <p class="hero-subtitle">
             The most advanced Sparx-style AI assistant.<br>
             Fast. Accurate. Reliable.
@@ -232,9 +232,9 @@
 
     <!-- ABOUT -->
     <section id="about">
-        <h2>What is OnxAI?</h2>
+        <h2>What is ONxAI?</h2>
         <p>
-            OnxAI is a high-performance Sparx-style assistant engineered for speed,
+            ONxAI is a high-performance Sparx-style assistant engineered for speed,
             precision, and clarity. Designed to outperform traditional study bots,
             it delivers consistent, reliable explanations without distraction.
         </p>
@@ -243,7 +243,7 @@
     <!-- FEATURES -->
     <section id="features">
         <h3>Why It Matters</h3>
-        <p>OnxAI solves the problem of slow or unreliable academic tools by offering:</p>
+        <p>ONxAI solves the problem of slow or unreliable academic tools by offering:</p>
         <ul>
             <li>Lightning-fast responses</li>
             <li>High-accuracy explanations</li>
@@ -254,7 +254,7 @@
     <!-- DISCORD -->
     <section id="discord">
         <h2>Join Our Discord Server</h2>
-        <p>Use OnxAI for free, get support, and stay up to date.</p>
+        <p>Use ONxAI for free, get support, and stay up to date.</p>
         <a href="https://discord.gg/hpr8ssYHuJ" target="_blank">
             <button class="hero-btn">Join Discord</button>
         </a>
@@ -262,7 +262,7 @@
 
     <!-- FOOTER -->
     <footer>
-        © 2026 OnxAI · <a href="/credits">Credits</a>
+        © 2026 ONxAI · <a href="/credits">Credits</a>
     </footer>
 
 </body>
