--- a/credits/index.html
+++ b/credits/index.html
@@ -16,13 +16,14 @@
 
   body {
     font-family: 'Inter', sans-serif;
-    background: #000;
-    color: #fff;
+    background: #000000;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(69, 72, 79, 1) 100%, rgba(71, 76, 99, 1) 50%);    color: #fff;
     min-height: 100vh;
   }
 
   /* Navbar / Header */
   nav {
+    background-color: #000000;
     display: flex;
     align-items: center;
     padding: 20px 40px;
@@ -92,6 +93,7 @@
 
   /* Footer */
   footer {
+    background-color: #000000;
     text-align: center;
     padding: 30px 20px;
     border-top: 1px solid #222;
