--- a/humanizer/index.html
+++ b/humanizer/index.html
@@ -16,8 +16,8 @@
 
   body {
     font-family: 'Inter', sans-serif;
-    background: #000;
-    color: #fff;
+    background: #000000;
+    background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(69, 72, 79, 1) 100%, rgba(71, 76, 99, 1) 50%);    color: #fff;
     line-height: 1.6;
   }
 
@@ -71,6 +71,18 @@
     padding: 40px 20px;
   }
 
+  #hero-box {
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 40px;
+    border: 1px solid #333;
+    border-radius: 12px;
+
+  }
+
   #hero h1 {
     font-size: 3rem;
     margin-bottom: 20px;
@@ -90,6 +102,8 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    background-color: #000;
+
   }
 
   textarea {
@@ -136,6 +150,7 @@
 
   /* Footer */
   footer {
+    background-color: #000;
     border-top: 1px solid #222;
     padding: 40px 20px;
     text-align: center;
@@ -173,6 +188,7 @@
 
 <!-- Hero / AI Humanizer -->
 <section id="hero">
+  <div id="hero-box">
   <h1>ONxAI Humanizer</h1>
   <p>
     Instantly rewrite your text to sound natural, human, and authentic.
@@ -180,11 +196,12 @@
   </p>
 
   <div class="humanizer-box">
-    <textarea id="inputText" placeholder="Paste or type your text here..."></textarea>
+    <textarea style="background-color: #111;" id="inputText" placeholder="Paste or type your text here..."></textarea>
     <button onclick="humanizeText()">Humanize Text</button>
     <div class="output" id="outputText">
 Your humanized text will appear here.
     </div>
+  </div>
   </div>
 </section>
 
